--- a/src/css/variables/_fonts.scss
+++ b/src/css/variables/_fonts.scss
@@ -1,2 +1,4 @@
-$standardFont: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-	'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+$headingsFont: 'Oswald', 'Helvetica Neue', sans-serif;
+$standardFont: 'Raleway', 'Helvetica Neue', sans-serif;
