--- a/src/css/_globals.scss
+++ b/src/css/_globals.scss
@@ -9,6 +9,7 @@ html {
 	font-family: sans-serif;
 	-ms-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
+	font-size: 62.5%;
 }
 body {
 	font-family: $standardFont;
