--- a/src/css/_globals.scss
+++ b/src/css/_globals.scss
@@ -12,6 +12,7 @@ html {
 	font-size: 62.5%;
 }
 body {
+	overflow-x: hidden;
 	font-family: $standardFont;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
