--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -17,6 +17,10 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-overflow-scrolling: touch;
+	&.lock-scroll {
+		overflow: hidden;
+		height: 100%;
+	}
 }
 a {
 	text-decoration: none;
