--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -12,7 +12,7 @@ html {
 	font-size: 62.5%;
 }
 body {
-	background-color: #0d0d0e;
+	background-color: $mainBackgroundColor;
 	min-height: 100vh;
 	font-family: $standardFont;
 	-webkit-font-smoothing: antialiased;
