--- a/_migration/src/styles/variables/_fonts.scss
+++ b/_migration/src/styles/variables/_fonts.scss
@@ -1,4 +1,2 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100..900&display=swap');
-$headingsFont: 'Oswald', 'Helvetica Neue', sans-serif;
-$standardFont: 'Raleway', 'Helvetica Neue', sans-serif;
+$headingsFont: var(--font-oswald), 'Helvetica Neue', sans-serif;
+$standardFont: var(--font-raleway), 'Helvetica Neue', sans-serif;
