migrated hero section and navbar

--- a/_migration/src/styles/variables/_colors.scss
+++ b/_migration/src/styles/variables/_colors.scss
@@ -1,1 +1,10 @@
 $mainBackgroundColor: #0d0d0e;
+$mainBackgroundColor: #0d0d0e;
+$mainColorDark: #1e1f2d;
+$mainColorLight: #a9b0e0;
+$mainAccentColor: #d4d379;
+$mainColorDarkRGB: rgb(30, 31, 45);
+$mainColorLightRGB: rgb(169, 176, 224);
+$mainAccentRGB: rgb(212, 211, 121);
+$textLight: #e3e3e3;
+$textLightRGB: rgb(227, 227, 227);
