--- a/src/styles/NavBar.module.scss
+++ b/src/styles/NavBar.module.scss
@@ -42,7 +42,7 @@
 	span:nth-child(4) {
 		font-weight: 200;
 		line-height: 0.2;
-		margin-top: -0.4em;
+		margin-top: -0.2em;
 		transform: scale(1, 1.72);
 	}
 	transition: transform ease-in-out 0.2s;
@@ -66,15 +66,7 @@
 			color: $mainColorDark;
 			display: block;
 			padding: 0.5em 1em;
-			&:hover,
-			&:focus {
-				outline: none;
-				text-decoration: none;
-				::after {
-					width: 100%;
-				}
-			}
-			&::after {
+			&:after {
 				background: $mainColorDark;
 				content: '';
 				display: block;
@@ -83,6 +75,14 @@
 				margin-top: 0.2em;
 				transition: width ease-out 0.2s;
 				width: 0;
+			}
+			&:hover,
+			&:focus {
+				outline: none;
+				text-decoration: none;
+				&:after {
+					width: 100%;
+				}
 			}
 		}
 	}
