--- a/src/styles/Home/Featured.module.scss
+++ b/src/styles/Home/Featured.module.scss
@@ -1,197 +1,199 @@
 @use '../variables' as *;
 
 .section {
-	background-color: rgba($mainColorDarkRGB, 0.75);
+  background-color: rgba($mainColorDarkRGB, 0.75);
 }
 
 .featureSection {
-	max-width: $breakpointMaxWidth;
-	overflow: hidden;
-	padding: 0 max(4rem, env(safe-area-inset-left));
-	padding-bottom: 5em;
-	width: 100%;
-	@media screen and (max-width: $breakpointTablet) {
-		padding: 0 2.5em;
-		padding-bottom: 5em;
-	}
+  max-width: $breakpointMaxWidth;
+  overflow: hidden;
+  padding: 0 max(4rem, env(safe-area-inset-left));
+  padding-bottom: 5em;
+  width: 100%;
+  @media screen and (max-width: $breakpointTablet) {
+    padding: 0 2.5em;
+    padding-bottom: 5em;
+  }
 }
 
 .featuredContainer {
-	display: grid;
-	grid-gap: 2.5em 6em;
-	grid-template-columns: repeat(3, minmax(0, 1fr));
-	justify-content: space-between;
-	margin-bottom: 6em;
-	width: 100%;
-	@media screen and (max-width: $breakpointTabletBig) {
-		grid-template-columns: repeat(2, minmax(0, 1fr));
-		a:last-child > div {
-			margin-left: calc(50% + 2.5em);
-		}
-	}
-	@media screen and (max-width: $breakpointMobileBig) {
-		grid-template-columns: 1fr;
-		a:last-child > div {
-			margin-left: 0;
-		}
-	}
+  display: grid;
+  grid-gap: 2.5em 6em;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  justify-content: space-between;
+  margin-bottom: 6em;
+  width: 100%;
+  @media screen and (max-width: $breakpointTabletBig) {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    a:last-child > div {
+      margin-left: calc(50% + 2.5em);
+    }
+  }
+  @media screen and (max-width: $breakpointMobileBig) {
+    grid-template-columns: 1fr;
+    a:last-child > div {
+      margin-left: 0;
+    }
+  }
 }
 
 .centeredSection {
-	align-items: center;
-	display: grid;
-	width: 100%;
-	a {
-		margin: 0 auto;
-	}
+  align-items: center;
+  display: grid;
+  width: 100%;
+  a {
+    margin: 0 auto;
+  }
 }
 
 .viewAllProjects {
-	@include mainButton;
-	background-color: $mainAccentColor;
-	color: $mainColorDark;
-	display: inline-block;
-	margin: 0 auto;
+  @include mainButton;
+  background-color: $mainAccentColor;
+  color: $mainColorDark;
+  display: inline-block;
+  margin: 0 auto;
 }
 
 .cardWrapper {
-	align-items: center;
-	backface-visibility: hidden;
-	background: linear-gradient(
-			rgba(0, 0, 0, 0.2) 0%,
-			rgba(0, 0, 0, 0.15) 40%,
-			rgba(0, 0, 0, 0) 70%,
-			rgba(0, 0, 0, 0) 100%
-		),
-		rgba($mainColorLightRGB, 0.1);
-	border-radius: 2em;
-	box-shadow: 0 0.4em 0.4em rgba(0, 0, 0, 0.2), 0 2em 5em rgba(0, 0, 0, 0.3);
-	cursor: pointer;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	margin-top: 2.5em;
-	perspective: 1200px;
-	transform-style: preserve-3d;
-	min-height: min(60vh, 45em);
-	width: 100%;
+  align-items: center;
+  backface-visibility: hidden;
+  background: linear-gradient(
+      rgba(0, 0, 0, 0.2) 0%,
+      rgba(0, 0, 0, 0.15) 40%,
+      rgba(0, 0, 0, 0) 70%,
+      rgba(0, 0, 0, 0) 100%
+    ),
+    rgba($mainColorLightRGB, 0.1);
+  border-radius: 2em;
+  box-shadow: 0 0.4em 0.4em rgba(0, 0, 0, 0.2), 0 2em 5em rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-top: 2.5em;
+  perspective: 1200px;
+  transform-style: preserve-3d;
+  min-height: min(60vh, 45em);
+  width: 100%;
 }
 
 .headerWrapper {
-	padding: 2em 0;
-	width: 100%;
-	perspective: 1200px;
-	transform-style: preserve-3d;
-	h3 {
-		backface-visibility: hidden;
-		color: $mainAccentColor;
-		font-family: $headingsFont;
-		font-size: clamp(1.8rem, 2vw, 2.4rem);
-		font-weight: 400;
-		letter-spacing: 0.15em;
-		text-align: center;
-		text-transform: uppercase;
-		transition: all 0.3s ease;
-		width: 100%;
-		@media screen and (max-width: $breakpointTablet) {
-			font-size: clamp(2rem, 6vw, 2.6rem);
-		}
-	}
-	ul {
-		backface-visibility: hidden;
-		margin-top: 2em;
-		text-align: center;
-		transition: transform 0.3s ease;
-		width: 100%;
-		li {
-			color: $textLight;
-			display: inline-block;
-			font-size: clamp(1rem, 1vw, 1.2rem);
-			font-weight: 700;
-			letter-spacing: 0.1em;
-			line-height: 1.6;
-			margin: 0 0.5em;
-			text-transform: uppercase;
-			@media screen and (max-width: $breakpointTablet) {
-				font-size: 1.2rem;
-			}
-		}
-	}
+  padding: 2em 0;
+  width: 100%;
+  perspective: 1200px;
+  transform-style: preserve-3d;
+  h3 {
+    backface-visibility: hidden;
+    color: $mainAccentColor;
+    font-family: $headingsFont;
+    font-size: clamp(1.8rem, 2vw, 2.4rem);
+    font-weight: 400;
+    letter-spacing: 0.15em;
+    text-align: center;
+    text-transform: uppercase;
+    transition: all 0.3s ease;
+    width: 100%;
+    @media screen and (max-width: $breakpointTablet) {
+      font-size: clamp(2rem, 6vw, 2.6rem);
+    }
+  }
+  ul {
+    backface-visibility: hidden;
+    margin-top: 2em;
+    text-align: center;
+    transition: transform 0.3s ease;
+    width: 100%;
+    li {
+      color: $textLight;
+      display: inline-block;
+      font-size: clamp(1rem, 1vw, 1.2rem);
+      font-weight: 700;
+      letter-spacing: 0.1em;
+      line-height: 1.6;
+      margin: 0 0.5em;
+      text-transform: uppercase;
+      @media screen and (max-width: $breakpointTablet) {
+        font-size: 1.2rem;
+      }
+    }
+  }
 }
 
 .cardButton {
-	@include secondaryButton;
-	border-color: $mainAccentColor;
-	color: $mainAccentColor;
-	margin: 2.5em 0;
-	position: relative;
+  @include secondaryButton;
+  border-color: $mainAccentColor;
+  color: $mainAccentColor;
+  margin: 2.5em 0;
+  position: relative;
 }
 
 .cardImages {
-	perspective: 1200px;
-	transform-style: preserve-3d;
-	height: auto;
-	margin: 0 1em;
-	padding: 0 1em;
-	position: relative;
-	width: calc(100% - 2em);
-	img {
-		display: block;
-		backface-visibility: visible;
-		bottom: 0;
-		position: absolute;
-		transition: transform 0.3s ease;
-		&:first-child {
-			position: relative;
-		}
-	}
+  perspective: 1200px;
+  transform-style: preserve-3d;
+  height: auto;
+  margin: 0 1em;
+  padding: 0 1em;
+  position: relative;
+  width: calc(100% - 2em);
+  .image {
+    display: block;
+    backface-visibility: visible;
+    bottom: 0;
+    position: absolute;
+    transition: transform 0.3s ease;
+    &:first-child {
+      position: relative;
+    }
+  }
 }
 
 .clientContainer {
-	box-sizing: border-box;
-	display: flex;
-	gap: clamp(30px, 3vw, 60px);
-	justify-content: space-between;
-	margin-bottom: 3em;
-	margin-top: 5em;
-	overflow: hidden;
-	width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  gap: clamp(30px, 3vw, 60px);
+  justify-content: space-between;
+  margin-bottom: 3em;
+  margin-top: 5em;
+  overflow: hidden;
+  width: 100%;
 }
 
 .client {
-	align-items: center;
-	background-color: white;
-	border-radius: 0.5em;
-	display: flex;
-	filter: grayscale(100%);
-	flex-shrink: 0;
-	height: clamp(90px, 8vw, 140px);
-	justify-content: center;
-	opacity: 0.5;
-	padding: 1em;
-	transition: filter ease-out 0.3s, opacity ease-out 0.3s;
-	width: clamp(90px, 8vw, 140px);
-	&:hover {
-		filter: grayscale(0);
-		opacity: 1;
-	}
-	img {
-		height: 100%;
-	}
-	&.scroll {
-		animation-direction: alternate;
-		animation-duration: calc(var(--speed) * 1s);
-		animation-iteration-count: infinite;
-		animation-name: scrollAnimation;
-		animation-timing-function: ease-in-out;
-	}
+  align-items: center;
+  background-color: white;
+  border-radius: 0.5em;
+  display: flex;
+  filter: grayscale(100%);
+  flex-shrink: 0;
+  height: clamp(90px, 8vw, 140px);
+  justify-content: center;
+  opacity: 0.5;
+  padding: 1em;
+  transition: filter ease-out 0.3s, opacity ease-out 0.3s;
+  width: clamp(90px, 8vw, 140px);
+  &:hover {
+    filter: grayscale(0);
+    opacity: 1;
+  }
+  .image {
+    height: 100%;
+    width: 100%;
+    position: relative;
+  }
+  &.scroll {
+    animation-direction: alternate;
+    animation-duration: calc(var(--speed) * 1s);
+    animation-iteration-count: infinite;
+    animation-name: scrollAnimation;
+    animation-timing-function: ease-in-out;
+  }
 }
 
 @keyframes scrollAnimation {
-	0% {
-		transform: translateX(0);
-	}
-	100% {
-		transform: translateX(calc(calc(var(--distance) * -1px) - 2px));
-	}
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(calc(calc(var(--distance) * -1px) - 2px));
+  }
 }
