--- a/src/styles/Home/Hero.module.scss
+++ b/src/styles/Home/Hero.module.scss
@@ -130,6 +130,7 @@
 }
 
 .cta {
+  cursor: pointer;
   background-color: $mainAccentColor;
   color: $mainColorDark;
   @media (orientation: portrait) {
