seo and performance

--- a/src/styles/Home/Hero.module.scss
+++ b/src/styles/Home/Hero.module.scss
@@ -166,6 +166,12 @@
     height: clamp(80%, 70vw, 115%);
     position: absolute;
   }
+  img {
+    height: clamp(80%, 70vw, 115%);
+    width: auto;
+    position: absolute;
+    aspect-ratio: 79/150;
+  }
   canvas {
     height: clamp(80%, 70vw, 115%);
     position: absolute;
