--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -18,6 +18,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-overflow-scrolling: touch;
+  font-size: 1.6rem;
   &.lock-scroll {
     overflow: hidden;
     height: 100%;
