--- a/src/styles/Footer/ContactForm.module.scss
+++ b/src/styles/Footer/ContactForm.module.scss
@@ -18,6 +18,7 @@
   gap: 3em;
   justify-content: space-between;
   width: 100%;
+
   @media screen and (max-width: $breakpointMobileBig) {
     justify-content: flex-start;
   }
@@ -26,7 +27,7 @@
     input,
     textarea {
       color: rgba($textLightRGB, 0.8);
-      font-size: clamp(1.4rem, 1.5vw, 1.6rem);
+      font-size: 16px;
     }
     &:hover :global(.MuiOutlinedInput-notchedOutline) {
       border-color: rgba($mainAccentRGB, 1);
