--- a/src/styles/Home/About.module.scss
+++ b/src/styles/Home/About.module.scss
@@ -34,7 +34,7 @@
 
 .historyList {
   color: $mainColorLight;
-  font-size: clamp(1.5rem, 1.7vw, 1.8rem);
+  font-size: 1.6rem;
   list-style: none;
   li {
     list-style: none;
