--- a/src/styles/Home/Hero.module.scss
+++ b/src/styles/Home/Hero.module.scss
@@ -143,7 +143,6 @@
   align-items: flex-end;
   display: flex;
   height: calc(100svh - 60px);
-  max-height: 1080px;
   overflow: hidden;
   @media (orientation: portrait) {
     max-height: none;
@@ -170,7 +169,7 @@
     height: clamp(80%, 70vw, 115%);
     width: auto;
     position: absolute;
-    aspect-ratio: 79/150;
+    aspect-ratio: 900/1700;
   }
   canvas {
     height: clamp(80%, 70vw, 115%);
@@ -190,6 +189,7 @@
 
 .portraitNodes {
   @include portrait;
+  padding-top: 0.4%;
   -webkit-user-select: none;
   @media screen and (max-width: 3000px) {
     width: 27%;
@@ -222,7 +222,7 @@
     content: '';
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background: $mainColorDark;
     opacity: var(--animate-opacity);
     pointer-events: none;
