Hero header font size fixes

--- a/src/styles/Home/Hero.module.scss
+++ b/src/styles/Home/Hero.module.scss
@@ -42,7 +42,7 @@
 .header {
   color: $mainAccentColor;
   font-family: $headingsFont;
-  font-size: clamp(2.5rem, 5.2vw, 10.4rem);
+  font-size: min(clamp(2.5rem, 5.2vw, 10.4rem), clamp(2.5rem, 12vh, 10.4rem));
   font-weight: 450;
   letter-spacing: 0.02rem;
   line-height: 1.2;
@@ -107,7 +107,7 @@
   color: $textLight;
   display: flex;
   font-family: $headingsFont;
-  font-size: clamp(2.5rem, 3vw, 5.2rem);
+  font-size: min(clamp(2.5rem, 3vw, 5.2rem), clamp(2.5rem, 8vh, 5.2rem));
   font-weight: 200;
   letter-spacing: 0.08rem;
   line-height: 1.2;
@@ -124,9 +124,10 @@
 }
 
 .ctaWrapper {
+  font-size: min(clamp(2.5rem, 3vw, 5.2rem), clamp(2.5rem, 8vh, 5.2rem));
   pointer-events: auto;
   max-width: 50%;
-  margin-top: 4em;
+  margin-top: 1em;
   z-index: 20;
 }
 
