--- a/src/styles/Home/Featured.module.scss
+++ b/src/styles/Home/Featured.module.scss
@@ -1,16 +1,16 @@
-@use '../variables' as *;
+@use '../variables';
 
 .section {
-  background-color: rgba($mainColorDarkRGB, 0.75);
+  background-color: rgba(variables.$mainColorDarkRGB, 0.75);
 }
 
 .featureSection {
-  max-width: $breakpointMaxWidth;
+  max-width: variables.$breakpointMaxWidth;
   overflow: hidden;
   padding: 0 max(4rem, env(safe-area-inset-left));
   padding-bottom: 5em;
   width: 100%;
-  @media screen and (max-width: $breakpointTablet) {
+  @media screen and (max-width: variables.$breakpointTablet) {
     padding: 0 2.5em;
     padding-bottom: 5em;
   }
@@ -23,13 +23,13 @@
   justify-content: space-between;
   margin-bottom: 6em;
   width: 100%;
-  @media screen and (max-width: $breakpointTabletBig) {
+  @media screen and (max-width: variables.$breakpointTabletBig) {
     grid-template-columns: repeat(2, minmax(0, 1fr));
     a:last-child > div {
       margin-left: calc(50% + 2.5em);
     }
   }
-  @media screen and (max-width: $breakpointMobileBig) {
+  @media screen and (max-width: variables.$breakpointMobileBig) {
     grid-template-columns: 1fr;
     a:last-child > div {
       margin-left: 0;
@@ -47,9 +47,9 @@
 }
 
 .viewAllProjects {
-  @include mainButton;
-  background-color: $mainAccentColor;
-  color: $mainColorDark;
+  @include variables.mainButton;
+  background-color: variables.$mainAccentColor;
+  color: variables.$mainColorDark;
   display: inline-block;
   margin: 0 auto;
 }
@@ -63,7 +63,7 @@
       rgba(0, 0, 0, 0) 70%,
       rgba(0, 0, 0, 0) 100%
     ),
-    rgba($mainColorLightRGB, 0.1);
+    rgba(variables.$mainColorLightRGB, 0.1);
   border-radius: 2em;
   box-shadow: 0 0.4em 0.4em rgba(0, 0, 0, 0.2), 0 2em 5em rgba(0, 0, 0, 0.3);
   cursor: pointer;
@@ -84,8 +84,8 @@
   transform-style: preserve-3d;
   h3 {
     backface-visibility: hidden;
-    color: $mainAccentColor;
-    font-family: $headingsFont;
+    color: variables.$mainAccentColor;
+    font-family: variables.$headingsFont;
     font-size: clamp(1.8rem, 2vw, 2.4rem);
     font-weight: 400;
     letter-spacing: 0.15em;
@@ -93,7 +93,7 @@
     text-transform: uppercase;
     transition: all 0.3s ease;
     width: 100%;
-    @media screen and (max-width: $breakpointTablet) {
+    @media screen and (max-width: variables.$breakpointTablet) {
       font-size: clamp(2rem, 6vw, 2.6rem);
     }
   }
@@ -104,7 +104,7 @@
     transition: transform 0.3s ease;
     width: 100%;
     li {
-      color: $textLight;
+      color: variables.$textLight;
       display: inline-block;
       font-size: clamp(1rem, 1vw, 1.2rem);
       font-weight: 700;
@@ -112,7 +112,7 @@
       line-height: 1.6;
       margin: 0 0.5em;
       text-transform: uppercase;
-      @media screen and (max-width: $breakpointTablet) {
+      @media screen and (max-width: variables.$breakpointTablet) {
         font-size: 1.2rem;
       }
     }
@@ -120,9 +120,9 @@
 }
 
 .cardButton {
-  @include secondaryButton;
-  border-color: $mainAccentColor;
-  color: $mainAccentColor;
+  @include variables.secondaryButton;
+  border-color: variables.$mainAccentColor;
+  color: variables.$mainAccentColor;
   margin: 2.5em 0;
   position: relative;
 }
