--- a/src/styles/NavBar.module.scss
+++ b/src/styles/NavBar.module.scss
@@ -1,7 +1,7 @@
-@use './variables' as *;
+@use './variables';
 
 .navBg {
-  background: $mainAccentColor;
+  background: variables.$mainAccentColor;
   box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1);
   display: flex;
   justify-content: center;
@@ -15,21 +15,21 @@
   display: flex;
   height: 60px;
   justify-content: space-between;
-  max-width: $breakpointMaxWidth;
+  max-width: variables.$breakpointMaxWidth;
   padding: 0 max(4rem, env(safe-area-inset-left));
   position: relative;
   width: 100%;
-  @media screen and (max-width: $breakpointTablet) {
+  @media screen and (max-width: variables.$breakpointTablet) {
     padding: 0 1em 0 2.5em;
   }
 }
 
 .logoTitle {
   align-items: center;
-  color: $mainColorDark;
+  color: variables.$mainColorDark;
   cursor: pointer;
   display: flex;
-  font-family: $headingsFont;
+  font-family: variables.$headingsFont;
   font-size: 2.2rem;
   font-weight: 250;
   letter-spacing: 0.07em;
@@ -64,11 +64,11 @@
     a,
     span {
       cursor: pointer;
-      color: $mainColorDark;
+      color: variables.$mainColorDark;
       display: block;
       padding: 0.5em 1em;
       &:after {
-        background: $mainColorDark;
+        background: variables.$mainColorDark;
         content: '';
         display: block;
         font-size: clamp(1.4rem, 1.5vw, 1.8rem);
@@ -87,30 +87,27 @@
       }
     }
   }
-  @media screen and (max-width: $breakpointTablet) {
+  @media screen and (max-width: variables.$breakpointTablet) {
     display: none;
   }
 }
 
 .menuToggle {
-  color: $mainColorDark;
+  color: variables.$mainColorDark;
   cursor: pointer;
   display: none;
   padding: 0.5em;
   svg {
     margin-top: 0.1em;
   }
-  @media screen and (max-width: $breakpointTablet) {
+  @media screen and (max-width: variables.$breakpointTablet) {
     display: block;
   }
 }
 
 .mobileNav {
   display: none;
-  @media screen and (max-width: $breakpointTablet) {
-    display: block;
-  }
-  background: rgba($mainColorDarkRGB, 0.95);
+  background: rgba(variables.$mainColorDarkRGB, 0.95);
   height: 100vh;
   left: 0;
   padding: 3rem;
@@ -120,10 +117,13 @@
   transform: translateZ(3000px);
   width: 100vw;
   z-index: 3000;
+  @media screen and (max-width: variables.$breakpointTablet) {
+    display: block;
+  }
 }
 
 .closeMobileMenu {
-  color: $mainAccentColor;
+  color: variables.$mainAccentColor;
   cursor: pointer;
   padding: 0.5em;
   position: absolute;
@@ -147,7 +147,7 @@
     margin-top: 0;
     a,
     span {
-      color: $mainAccentColor;
+      color: variables.$mainAccentColor;
       display: block;
       padding: 0.5em 1em;
       &:hover,
