--- a/src/styles/Portfolio/PortfolioCard.module.scss
+++ b/src/styles/Portfolio/PortfolioCard.module.scss
@@ -1,4 +1,4 @@
-@use '../variables' as *;
+@use '../variables';
 
 .portfolioCardWrapper {
   align-items: center;
@@ -8,7 +8,7 @@
       rgba(0, 0, 0, 0) 70%,
       rgba(0, 0, 0, 0) 100%
     ),
-    rgba($mainColorLightRGB, 0.1);
+    rgba(variables.$mainColorLightRGB, 0.1);
   border-radius: 2em;
   cursor: pointer;
   display: flex;
@@ -34,8 +34,8 @@
     transition: opacity ease-out 0.3s;
   }
   h3 {
-    color: $mainAccentColor;
-    font-family: $headingsFont;
+    color: variables.$mainAccentColor;
+    font-family: variables.$headingsFont;
     font-size: clamp(1.8rem, 2vw, 2.4rem);
     font-weight: 400;
     letter-spacing: 0.15em;
@@ -43,7 +43,7 @@
     text-transform: uppercase;
     transition: all 0.3s ease;
     width: 100%;
-    @media screen and (max-width: $breakpointTabletBig) {
+    @media screen and (max-width: variables.$breakpointTabletBig) {
       font-size: clamp(2rem, 6vw, 2.6rem);
     }
   }
@@ -53,7 +53,7 @@
     text-align: center;
     width: 100%;
     li {
-      color: $textLight;
+      color: variables.$textLight;
       display: inline-block;
       font-size: clamp(1rem, 1vw, 1.2rem);
       font-weight: 700;
@@ -61,7 +61,7 @@
       line-height: 1.6;
       margin: 0 0.5em;
       text-transform: uppercase;
-      @media screen and (max-width: $breakpointTablet) {
+      @media screen and (max-width: variables.$breakpointTablet) {
         font-size: 1.2rem;
       }
     }
